--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
-    "vuetify": "^2.4.0"
+    "vuedraggable": "^2.24.3",
+    "vuelidate": "^0.7.7",
+    "vuetify": "^2.4.0",
+    "vuex": "v3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
